--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,61 @@ li{
     border: 0;
     border-radius: 5px;
 }
+
+.promo{
+    display: flex;
+    width: 70%;
+    margin: 100px auto;
+    align-items: center;
+}
+
+.publish{
+    margin: 100px 25px;
+}
+
+.publish h3{
+    font-family: "alegreya", serif;
+    font-size: 40px;
+    line-height: 48px;
+    color: #025157;
+}
+
+.publish > p {
+    font-size: 16px;
+    color: #343434;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+.publish > form{
+    display: flex;
+}
+
+.publish > form p{
+    color: #025157;
+    margin-right: 18px;
+}
+
+.explanatory-video{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.explanatory-video img{
+    width: 120px;
+    margin-top: 10px;
+}
+
+.fixed-header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #fffbf7;
+}
+
+main{
+    margin-top: 285px;
+    text-align: center;
+}
